<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background_edit"
    android:fadeScrollbars="false"
    tools:context="edu.fontbonne.mobileapplab.flit.SpendingActivity">
    <ViewFlipper
        android:id="@+id/spending_flipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_home"
                android:textSize="32sp"
                android:textColor="#444444"/>

            <TextView
                android:id="@+id/main_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_food"
                android:textSize="32sp"
                android:textColor="#444444"/>

            <TextView
                android:id="@+id/main_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_health"
                android:textSize="32sp"
                android:textColor="#444444"/>

            <TextView
                android:id="@+id/main_transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_transport"
                android:textSize="32sp"
                android:textColor="#444444"/>

            <TextView
                android:id="@+id/main_debts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_debts"
                android:textSize="32sp"
                android:textColor="#444444"/>

            <TextView
                android:id="@+id/main_entertainment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_entertainment"
                android:textSize="32sp"
                android:textColor="#444444"/>

            <TextView
                android:id="@+id/main_clothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_clothing"
                android:textSize="32sp"
                android:textColor="#444444"/>

            <TextView
                android:id="@+id/main_savings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_savings"
                android:textSize="32sp"
                android:textColor="#444444"/>

            <TextView
                android:id="@+id/main_emergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_emergency"
                android:textSize="32sp"
                android:textColor="#444444"/>
        </LinearLayout>
    </ViewFlipper>
</ScrollView>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/overlay_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/background_edit"
        android:stretchColumns="1"
        android:visibility="gone">

        <TableRow
            android:paddingTop="16dp"
            android:paddingBottom="16dp">
            <TextView
                android:id="@+id/spending_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location:"
                android:textSize="20sp"
                android:textColor="#444444"/>

            <EditText
                android:id="@+id/spending_add_location_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Spending Location"/>
        </TableRow>

        <TableRow
            android:paddingTop="16dp"
            android:paddingBottom="16dp">
            <TextView
                android:id="@+id/spending_add_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount:"
                android:textSize="20sp"
                android:textColor="#444444"/>

            <EditText
                android:id="@+id/spending_add_amount_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="Spending Amount" />
        </TableRow>

        <TableRow
            android:gravity="center">
            <Button
                android:id="@+id/spending_add_save"
                android:text="Save"
                android:onClick="onSaveButtonPressed"/>
        </TableRow>
    </TableLayout>
</FrameLayout>
</merge>